# embedding-serve

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
bixi/embeddings/: __init__.py  logging_config.py  protocol.py  serve.py
bixi/embeddings/engines/: __init__.py  engines.py
bixi/embeddings/models/: base.py
bixi/embeddings/settings/: logging_setting.py
embedding_serve/: engine.py  logging_config.py  protocol.py  serve.py
embedding_serve/models/: bge.py
src/bixi/embeddings/: __init__.py  serve.py
src/bixi/embeddings/engines/: __init__.py  engines.py
src/bixi/embeddings/models/: __init__.py  base.py
src/bixi/embeddings/settings/: __init__.py
tests/: test_bge.py  test_gte.py  test_image.py  test_model.py  test_qwen2_vl.py  test_rerank.py  test_siglip.py  test_vit.py
