[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heliumos-bixi-embeddings"
version = "0.6.0"
description = "heliumos-bixi-embeddings is a fast and easy-to-use library for document embedding."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.4.1", "torchvision==0.19.1", "sentencepiece", "protobuf", "peft", "uvicorn", "fastapi", "logging-config", "transformers", "pillow"
]

[tool.setuptools.packages.find]
where = ['src']
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]